tests/snapshots/sizes__tap_pools_100x30.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                              │
│  FROM users                                                                                      │
│  W┌ JDBC tap — 8 queries · 0 heartbeats · view: pools · v cycle · Shift-B baseline · … ──────┐   │
│  O│  conns   peak   calls    err        busy        p95  pool · app                          │   │
└───│      3      1       8      0       4.9ms      1.8ms  primary · shop-api                  │───┘
┌ re│                                                                                          │───┐
│id │                                                                                          │   │
│1  │                                                                                          │   │
│2  │                                                                                          │   │
│3  │                                                                                          │   │
│4  │                                                                                          │   │
│5  │                                                                                          │   │
│6  │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   │                                                                                          │   │
│   └──────────────────────────────────────────────────────────────────────────────────────────┘   │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · Shift-B baseline · s sort · c clear · q close · F1 help
