tests/snapshots/sizes__tap_pools_200x50.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
 1 SELECT id, email,…                                                                                                                                            ] [ switch · ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                                                                                                                                  │
│  FROM users                                                                                                                                                                                          │
│  WHERE plan = 'pro'                                                                                                                                                                                  │
│  ORDER BY created_at DESC;                                                                                                                                                                           │
│       ┌ JDBC tap — 8 queries · 0 heartbeats · view: pools · v cycle · Shift-B baseline · s sort · c clear · q close ─────────────────────────────────────────────────────────────────────────┐       │
└───────│  conns   peak   calls    err        busy        p95  pool · app                                                                                                                      │───────┘
┌ result│      3      1       8      0       4.9ms      1.8ms  primary · shop-api                                                                                                              │───────┐
│id  ema│                                                                                                                                                                                      │       │
│1   ada│                                                                                                                                                                                      │       │
│2   lin│                                                                                                                                                                                      │       │
│3   gra│                                                                                                                                                                                      │       │
│4   ala│                                                                                                                                                                                      │       │
│5   eds│                                                                                                                                                                                      │       │
│6   kat│                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       │                                                                                                                                                                                      │       │
│       └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘       │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · Shift-B baseline · s sort · c clear · q close · F1 help
