tests/snapshots/sizes__tap_pools_60x16.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
 1 SELECT id, email,…               ] [ switch · ctrl-t new
┌ editor (e to focus) ─────────────────────────────────────┐
│ ┌ JDBC tap — 8 queries · 0 heartbeats · … ────────────┐  │
│ │  conns   peak   calls    err        busy        p95 │  │
│ │      3      1       8      0       4.9ms      1.8ms │  │
└─│                                                     │──┘
┌ │                                                     │──┐
│i│                                                     │  │
│1│                                                     │  │
│2│                                                     │  │
│3│                                                     │  │
│4└─────────────────────────────────────────────────────┘  │
│5   edsger@example.com     free  2026-03-03 11:22:00+00   │
└──────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · F1 +5 more
