tests/snapshots/sizes__tap_pools_80x24.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                          │
│  ┌ JDBC tap — 8 query · 0 heartbeat · view: pools · v cycle · Shift-B bas┐   │
│  │  conns   peak   calls    err        busy        p95  pool · app       │   │
│  │      3      1       8      0       4.9ms      1.8ms  primary · shop-ap│   │
└──│                                                                       │───┘
┌ r│                                                                       │───┐
│id│                                                                       │   │
│1 │                                                                       │   │
│2 │                                                                       │   │
│3 │                                                                       │   │
│4 │                                                                       │   │
│5 │                                                                       │   │
│6 │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  │                                                                       │   │
│  └───────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   j/k navigate · v cycle 7 views · Shift-B baseline · F1 +4 more
